builds/2.4.0/docs/changelog.md
# Changelog

## 2.3.1 
### Current Release

*May 24, 2021*

* Removed CFH from Logic
* Added DCX to Logic

## 2.3.0 

*May 20, 2021*

* Create new menu item for Syncing with Dropbox/Database
* Create Database on Dropbox for a more centralized approach to data management
* Add Upload amCharts Scripts option
* AutoCharts now syncs amCharts scripts with database when running
* Add Upload DataLinker to Database Option
* Add Export DataLinker Option
* Add Import DataLinker Option

## 2.2.0

*May 12, 2021*

* Added Ability to Update Expense Ratios
* Removed CTV fund
* AutoCharts now automatically syncs with Dropbox before processing changes. This ensures AutoCharts is always in sync with Dropbox
* Removed unnecessary files from repository
* Added ability to archive the InDesign and Backup Files from Dropbox to user specified directory
* Added ability to clear the log file
* Replaced Quarter Select List with radio buttons. This allows AutoCharts to load the last selected quarter from the settings.ini file
* Updated/Added/Removed multiple fund charts for new fact sheet changes from Q1 of 2021

## 2.1.1

*April 30, 2021*

First release ready for multi user testing.

* Rebuilt in AutoIt and Node.js
* All Charts are generated locally vs through the catalystmf.com website
* Updated GUI with seperated funds by family
* Optimized by factor of x50
* Windows installer created
* Automated log file for debugging added
* Documentation added

## 0.2.0

* Deprecated